[package]
name = "hana_bot"
version = "0.1.0"
authors = ["pantoufle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.1"
tokio = { version = "0.2", features = ["macros"] }
strum = {version = "0.19", features = ["derive"]}
lazy_static = "1.4.0"